App/istio_gw/weight.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-wtdist-vs
spec:
  hosts:
    - webservice
    - webservice.greetings.com
  gateways :
  - webapp-gateway
  http:
  - route:
    - destination:
        host: webservice
        subset: v2
      weight: 25
    - destination:
        host: webservice
        subset: v0
      weight: 75
